--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "deploy": "pm2 start npm --name badraghe -- start"
+    "deploy": "pm2 start npm --name samirgasht -- start"
   },
   "dependencies": {
     "core-js": "^3.25.3",
